chore: Changed indent and converted german comments to english

--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -91,7 +91,7 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-    align-items: left;
+    align-items: flex-start;
     color: white;
     font-size: 30px;
     line-height: 1.2;
@@ -192,159 +192,3 @@
        }
     }  
 }
-
-
-
-/*.logincontainer{
-    height: 96vh;
-    display: flex;
-    flex-direction: column;
-
-    .logorow{
-        margin: 20px;
-        display: flex;
-        flex-direction: row;
-
-        .nav{
-            background-color: #F2F4F7;
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-            margin-left: auto;
-            width: 100%;
-
-            >ul {
-                background-color: #F2F4F7;
-                border-bottom: none;
-            }
-
-            @media (max-width: 992px){
-                .navmenu {
-                    width: 80px;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: flex-end;
-                }
-            }
-
-            @media (min-width: 993px){
-                .navmenu {
-                    width: 100%;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: flex-end;
-                }
-            }
-
-        }
-    }
-
-    .formContainer{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 80vh;
-
-        .formtitle{
-            margin-bottom: 20px;
-            font-size: 32px;
-            font-weight: 700;
-            line-height: 44px;
-        }
-
-        .formexplanation{
-            color: var(--foreground-rgb-secondary);
-            font-size: 16px;
-            line-height: 24px;
-            margin-bottom: 32px;
-            width: 90%;
-            text-align: center;
-        }
-
-        .loginform {
-            max-width: 360px;
-            width: 80%;
-
-            .loginpart{
-                font-weight: 700;
-                line-height: 20px;
-                size: 14px;
-                letter-spacing: 1%;
-            }
-
-            .logininput{
-                background-color: white;
-                padding: 10px 14px 10px 14px;
-                border-radius: 8px;
-            }
-
-            .rememberrow{
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-
-                a {
-                    color: #1478FD;
-                    font-weight: 700;
-                }
-            }
-
-            .loginbutton{
-                width: 100%;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                margin-top: 32px;
-                
-                
-            }
-        }
-
-        .signupnotice{
-            font-size: 14px;
-            display: flex;
-            flex-direction: row;
-
-            .signuplink{
-                margin-left: 8px;
-                color: #1478FD;
-                font-weight: 700;
-            }
-        }
-
-    }
-
-    .googleloginbutton{
-        width: 360px;
-        height: 44px;
-        margin-bottom: 32px;
-
-        button {
-            width: 360px;
-            height: 44px;
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 24px;
-            padding: 10px 18px 10px 18px;
-        }
-    }
-}*/
-/*
-.copyrightfooter{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    color: #fff;
-}*/
-/*
-.headericon> svg{
-    font-size: 24px;
-    fill: transparent;
-    color: inherit;
-    stroke: inherit;
-
-    > path {
-        stroke: black;
-    }
-}*/
