--- a/components/InputBlock/editorblock.module.scss
+++ b/components/InputBlock/editorblock.module.scss
@@ -6,17 +6,17 @@
   background-color: white;
   border-radius: 12px;
 
-  padding: 10px 10px 20px 10px;
+  padding: 20px 10px 20px 10px;
 
   position: relative;
 
   font-weight: bold;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
-.add {
+/*.add {
   position: relative;
   left: 100%;
 
@@ -35,6 +35,10 @@
     opacity: 1;
     cursor: pointer;
   }
+}*/
+
+.optionsinput{
+  width: 100%;
 }
 
 .edit{
@@ -158,4 +162,15 @@
 
 .editorcard{
   margin-top: 15px;
+}
+
+.optionswitch{
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+
+.selectadditionaloptions{
+  margin-bottom: 32px;
 }
