Feat: Added a basic delete modal for assistants

--- a/components/AssistantCard/assistantcard.module.scss
+++ b/components/AssistantCard/assistantcard.module.scss
@@ -124,3 +124,10 @@
         cursor: pointer;
     }
 }
+
+.deletemodalbuttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 16px;
+}
