--- a/components/StoreSidebar/storesidebar.module.scss
+++ b/components/StoreSidebar/storesidebar.module.scss
@@ -1,4 +1,5 @@
-	
+
+
 /* For very small screen devices (500px and below) */
 @media only screen and (max-width: 1500px){ 
     .navigation {
@@ -115,7 +116,6 @@
             font-size: 36px;
             fill: transparent;
             color: inherit;
-            stroke: inherit;
         }
     }
 
@@ -393,7 +393,6 @@
     transform: translate(-2px, 3px);
     fill: transparent;
     color: inherit;
-    stroke: inherit;
 }
 
 .floaticon > svg{
@@ -422,5 +421,46 @@
 
     .badge {
         color: #344054;
+    }
+}
+
+.backlist {
+    margin-bottom: 32px;
+
+    .assistantlink {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 4px 12px 8px 12px;
+        gap: 12px;
+        font-size: 18px;
+        font-weight: bold;
+        background-color: #F2F4F7;
+        border-radius: 6px;
+
+        &:hover {
+            cursor: pointer;
+            background-color: #d4dae4;
+        }
+
+        .assistanticon > svg{
+            size: 6px;
+            height: 21px;
+            width: 20px;
+            transform: translate(-2px, 3px);
+            fill: transparent;
+            color: #344054;
+            stroke: #344054;
+
+            >path {
+                stroke: #344054;
+            }
+        }
+    }
+
+    .selectedcat{
+        background-color: #F9FAFB;
+        border-radius: 6px;
     }
 }
