--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -8,6 +8,10 @@
 
         .greetingrow {
             width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding-right: 15%;
             
             .greeting {
                 font-size: large;
@@ -93,6 +97,10 @@
 
         .greetingrow {
             width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding-right: 15%;
             
             .greeting {
                 font-size: 32px;
@@ -147,20 +155,6 @@
                 flex-direction: row;
                 justify-content: space-between;
             }
-        }
-    
-        
-    
-        .builderteaser{
-            background-image: url("/builder.png");
-            background-position: center;
-            background-size: cover;
-            height: 360px;
-            width: 50%;
-            padding-left: 50px;
-            padding-right: 10px;
-            border-radius: 20px;
-
         }
     }
 
