--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -67,7 +67,7 @@
                 height: 100px;
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
+                justify-content: center;
             }
 
             .builderbutton{
@@ -121,9 +121,6 @@
 
     .comingsoon{
         width: 100%;
-        opacity: 0.5;
-
-        
     }
 
     .comingsooncard{
@@ -153,9 +150,21 @@
                 margin-top: 50px;
                 display: flex;
                 flex-direction: row;
-                justify-content: space-between;
+                justify-content: center;
             }
         }
+    }
+
+    .builderteaser{
+        background-image: url("/builder.png");
+        background-position: center;
+        background-size: cover;
+        height: 360px;
+        width: 50%;
+        padding-left: 50px;
+        padding-right: 10px;
+        border-radius: 20px;
+
     }
 
     .bannersection{
