--- a/pages/store/index.module.scss
+++ b/pages/store/index.module.scss
@@ -210,6 +210,7 @@
                 flex-wrap: wrap;
                 justify-content: center;
                 gap: 32px;
+                margin-bottom: 100px;
             }
         }
 
@@ -219,6 +220,7 @@
                 flex-direction: row;
                 flex-wrap: wrap;
                 gap: 32px;
+                margin-bottom: 100px;
             }
         }
 
