--- a/chatbot/src/style.scss
+++ b/chatbot/src/style.scss
@@ -1,4 +1,5 @@
-
+@import './components/assistant.module.scss';
+@import './components/chatassistant.module.scss';
 /* Hide scrollbar for Chrome, Safari and Opera */
 .container::-webkit-scrollbar {
     display: none;
