--- a/chatbot/src/style.scss
+++ b/chatbot/src/style.scss
@@ -1,7 +1,33 @@
 @import './components/assistant.module.scss';
 @import './components/chatassistant.module.scss';
+
+body{
+    margin: 0;
+}
+
+.fixed-chat ::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #E6E6E6;
+}
+
+.fixed-chat ::-webkit-scrollbar
+{
+    width: 6px;
+    display: block;
+}
+
+.fixed-chat ::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px #ACACAC;
+    background-color: #ACACAC;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
-.container::-webkit-scrollbar {
+
+#chatmsg::-webkit-scrollbar {
     display: none;
 }
   
@@ -12,24 +38,34 @@
 }
 
 .fixed-chat{
+    border-radius: 10px;
+    padding: 5px;
+    width: 97%;
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
     display: flex;
     align-items: center;
-    height: 100vh;
+    height: 95%;
     background: url(../public/bg.jpg) no-repeat;
     background-size: cover;
+    position: fixed;
+    bottom: 17px;
+    left: 1.5rem;
+    z-index: 999;
+    overflow: auto;
+    box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08),
+    0 3px 6px -4px rgba(0, 0, 0, 0.12),
+    0 9px 28px 8px rgba(0, 0, 0, 0.05);
 }
 .container {
-    width: calc(100% - 150px);
-    max-width: 550px;
+    width: 100%;
+    max-width: 100%;
     overflow: auto;
-    position: fixed;
-    height: calc(100vh - 50px);
-    max-height: calc(100vh - 50px);
-    top: 0;
+    height: 100%;
+    max-height: 100%;
+    margin: 0 auto;
 }
 .content {
     padding: 20px;
@@ -38,6 +74,7 @@
     flex-direction: column;
     font-size: 12px;
     color: #515151;
+    height: 80%;
 }
 .arrowup{
     position: fixed;
@@ -47,14 +84,20 @@
     width: 30px;
 }
 .message {
-    background-color: rgb(255 255 255 / 50%);
+    background-color: rgba(255, 255, 255, 0.5);
     border: 1px solid #fff;
     padding: 15px;
     border-radius: 15px;
     margin-bottom: 10px;
-    max-width: 80%;
+    max-width: 70%;
     position: relative;
+    overflow-y: auto;
 }
+
+.msgrow.message:last-child {
+    margin-bottom: 0;
+}
+
 .message p {
     margin: 0;
 }
@@ -65,10 +108,10 @@
     bottom: 0;
 }
 .time-left{
-    left: -15%;
+    left: 2%;
 }
 .time-right{
-    right: -15%;
+    right: 2%;
 }
 .message-small {
     background-color: rgb(255 255 255 / 50%);
@@ -77,19 +120,36 @@
     border-radius: 15px;
     margin-bottom: 10px;
     width: 80%;
-    margin-left: 15%;
+    margin-left: 24%;
     position: relative;
 }
 .chat-input {
-    padding: 10px 20px;
-    width: calc(100% - 150px);
-    max-width: 510px;
+    padding: 10px 4px;
+    width: 100%;
     overflow: auto;
-    position: fixed;
-    height: 100vh;
-    max-height: 40px;
+    position: absolute;
     bottom: 0;
+    border-bottom-right-radius: 5px;
+    bottom: 17px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    background: url(../public/bg.jpg) no-repeat;
+
+    form{
+        width: 100%;
+    }
 }
+
+.send-btn {
+    margin: auto;
+    padding: 0 1rem;
+}
+
+.inputformitem .area {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
 .chat-input input {
     padding: 10px 15px;
     border: 1px solid #ccc;
@@ -117,4 +177,25 @@
     right: 0;
     top: 0;
     bottom: 0;
+}
+
+
+/* Medium screen devices (700px and above) */
+@media only screen and (min-width: 700px) {
+    /* CSS Styling */
+    // applied CSS styling
+    // .fixed-chat {
+    //     max-width: 550px;
+    // }
+}
+
+@media only screen and (max-width: 500px){
+    // .fixed-chat {
+    //     max-width: 400px;
+    // }
+
+    .chat-input {
+        width: 100%;
+        max-width: 90%;
+    }    
 }
