--- a/chatbot/src/style.scss
+++ b/chatbot/src/style.scss
@@ -85,7 +85,7 @@ body{
   font-family: Arial, sans-serif;
   margin: 0;
   display: block;
-  background: url(http://localhost:9000/bg.jpg) no-repeat;
+  background: url(../public/bg.jpg) no-repeat;
   background-size: cover;
   position: fixed;
   bottom: 80px;
